@@ -2,6 +2,7 @@
 
 * Add ability to disable any build configuration
 * Add Gravatars to user references and allow individuals to decide if they should be displayed
+* Support gradle wrapper execution for gradle projects including it
 
 * Fix importing of child modules in large maven projects
 * Resolve issue with exceptions adding issues with very long summaries - Issue:104
